env_prod/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carbon-re-gke-ingress
  namespace: carbon-re
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "carbon-gke-cert"
    kubernetes.io/ingress.global-static-ip-name: "carbon-re-prod-static-ip"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: "www.carbonsaurus.net"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: carbontrack-fe
            port:
              number: 80
  - host: "carbonsaurus.net"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: carbontrack-fe
            port:
              number: 80
  - host: "api.carbonsaurus.net"
    http:
      paths:
      - path: "/track"
        pathType: Prefix
        backend:
          service:
            name: track-api-service
            port:
              number: 80
      - path: "/account"
        pathType: Prefix
        backend:
          service:
            name: account-api-service
            port:
              number: 80
      - path: "/scrap"
        pathType: Prefix
        backend:
          service:
            name: scrap-api-service
            port:
              number: 80
  - host: "admin.carbonsaurus.net"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: carbontrack-fe
            port:
              number: 80
